Implement real JWT auth, wire frontend to backend APIs, fix config and CI
Backend:
- pom.xml: downgrade Spring Boot 4.1.0→3.3.5 (4.1.0 does not exist)
- Add JwtTokenProvider and JwtAuthenticationFilter for real JWT flow
- SecurityConfig: inject JWT filter, drive CORS from env property
- AuthController: issue real signed JWT instead of mock-jwt-token
- application.properties: ddl-auto update→validate, lower security log level
- Order/OrderItem models: add @JsonIgnoreProperties to prevent lazy-load recursion

Frontend:
- api/index.js: axios instance with JWT ****** + 401 redirect
- Login.jsx: real POST /api/auth/login call (removes mock auth)
- Products.jsx: real GET /api/products call (removes hard-coded mock data)
- Register.jsx: new user registration form
- Orders.jsx: order history + cancel via backend
- Cart.jsx: cart with quantity controls + checkout → POST /api/orders
- App.jsx: add /register, /orders, /cart routes; protected route redirects
- .eslintrc.cjs: add missing ESLint config so lint step works in CI

DevOps:
- ci-cd.yml: remove || true from lint and test steps; combine mvn build+test
- docker-compose.yml: parameterise JWT_SECRET and DB_PASSWORD via env vars

Docs:
- README.md: correct Spring Boot version, remove Flyway claim, document all features
- backend/README.md: correct version, document JWT flow
- frontend/README.md: document new components and API integration
- SECURITY.md: fix CSRF claim (disabled correctly for stateless JWT API)
- IMPLEMENTATION_SUMMARY.md: accurate feature table and change log