@@ -1,7 +1,10 @@
 package com.ecommerce.config;
 
+import com.ecommerce.security.JwtAuthenticationFilter;
+import com.ecommerce.security.JwtTokenProvider;
 import com.ecommerce.service.UserService;
 import lombok.RequiredArgsConstructor;
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.http.HttpMethod;
@@ -15,6 +18,7 @@ import org.springframework.security.config.http.SessionCreationPolicy;
 import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.security.web.SecurityFilterChain;
+import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
@@ -23,11 +27,11 @@ import java.util.Arrays;
 import java.util.List;
 
 /**
- * Security configuration for the E-Commerce application
- * 
- * This configuration implements:
+ * Security configuration for the E-Commerce application.
+ *
+ * Implements:
  * - BCrypt password encoding
- * - JWT authentication (JWT filter would be added in complete implementation)
+ * - JWT authentication via request filter
  * - Role-based access control (RBAC)
  * - CORS configuration for frontend integration
  * - Stateless session management
@@ -39,24 +43,16 @@ import java.util.List;
 public class SecurityConfig {
 
     private final UserService userService;
+    private final JwtTokenProvider jwtTokenProvider;
 
-    /**
-     * Configure BCrypt password encoder
-     * Uses strength 12 for strong password hashing
-     * 
-     * @return PasswordEncoder bean
-     */
+    @Value("${app.cors.allowed-origins:http://localhost:3000,http://localhost:5173}")
+    private String allowedOriginsRaw;
+
     @Bean
     public PasswordEncoder passwordEncoder() {
         return new BCryptPasswordEncoder(12);
     }
 
-    /**
-     * Configure authentication provider
-     * Uses UserService for loading user details and BCrypt for password verification
-     * 
-     * @return DaoAuthenticationProvider
-     */
     @Bean
     public DaoAuthenticationProvider authenticationProvider() {
         DaoAuthenticationProvider authProvider = new DaoAuthenticationProvider();
@@ -65,29 +61,23 @@ public class SecurityConfig {
         return authProvider;
     }
 
-    /**
-     * Configure authentication manager
-     * 
-     * @param authConfig the authentication configuration
-     * @return AuthenticationManager bean
-     */
     @Bean
     public AuthenticationManager authenticationManager(AuthenticationConfiguration authConfig) throws Exception {
         return authConfig.getAuthenticationManager();
     }
 
-    /**
-     * Configure CORS to allow frontend access
-     * Allows requests from the React frontend running on port 3000
-     * 
-     * @return CorsConfigurationSource bean
-     */
+    @Bean
+    public JwtAuthenticationFilter jwtAuthenticationFilter() {
+        return new JwtAuthenticationFilter(jwtTokenProvider, userService);
+    }
+
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(List.of("http://localhost:3000", "http://localhost:5173"));
+        List<String> origins = Arrays.asList(allowedOriginsRaw.split(","));
+        configuration.setAllowedOrigins(origins);
         configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"));
-        configuration.setAllowedHeaders(Arrays.asList("*"));
+        configuration.setAllowedHeaders(List.of("*"));
         configuration.setAllowCredentials(true);
         configuration.setMaxAge(3600L);
 
@@ -96,51 +86,35 @@ public class SecurityConfig {
         return source;
     }
 
-    /**
-     * Configure security filter chain
-     * 
-     * Security rules:
-     * - Public endpoints: product listing, authentication
-     * - Protected endpoints: orders, user profile
-     * - Admin endpoints: product management, all orders
-     * - CSRF disabled for REST API (using JWT)
-     * - Stateless session management
-     * 
-     * @param http the HttpSecurity configuration
-     * @return SecurityFilterChain bean
-     */
     @Bean
     public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
         http
-                // CSRF is disabled for stateless REST API using JWT tokens
-                // JWT tokens in Authorization header provide CSRF protection
-                // For session-based authentication, CSRF should be enabled
+                // CSRF is disabled for the stateless REST API that uses JWT ******
+                // JWT tokens are sent in the Authorization header, not in cookies,
+                // so CSRF attacks are not applicable.
                 .csrf(csrf -> csrf.disable())
                 .cors(cors -> cors.configurationSource(corsConfigurationSource()))
                 .authorizeHttpRequests(auth -> auth
-                        // Public endpoints - no authentication required
+                        // Public endpoints
                         .requestMatchers("/api/auth/**").permitAll()
                         .requestMatchers(HttpMethod.GET, "/api/products/**").permitAll()
-                        
-                        // Admin endpoints - require ROLE_ADMIN
+                        .requestMatchers("/actuator/health").permitAll()
+
+                        // Admin-only endpoints
                         .requestMatchers(HttpMethod.POST, "/api/products/**").hasRole("ADMIN")
                         .requestMatchers(HttpMethod.PUT, "/api/products/**").hasRole("ADMIN")
                         .requestMatchers(HttpMethod.DELETE, "/api/products/**").hasRole("ADMIN")
-                        
-                        // Protected endpoints - require authentication
+
+                        // Protected endpoints
                         .requestMatchers("/api/orders/**").authenticated()
                         .requestMatchers("/api/users/**").authenticated()
-                        
-                        // All other requests require authentication
                         .anyRequest().authenticated()
                 )
                 .sessionManagement(session -> session
                         .sessionCreationPolicy(SessionCreationPolicy.STATELESS)
                 )
-                .authenticationProvider(authenticationProvider());
-
-        // In a complete implementation, add JWT authentication filter here:
-        // http.addFilterBefore(jwtAuthenticationFilter, UsernamePasswordAuthenticationFilter.class);
+                .authenticationProvider(authenticationProvider())
+                .addFilterBefore(jwtAuthenticationFilter(), UsernamePasswordAuthenticationFilter.class);
 
         return http.build();
     }
